# hack-cpp

./: .gitignore  CMakeLists.txt  README.md
01.hello-world/: CMakeLists.txt  Makefile
02.basic/: README.md  main.cpp
03.smart-ptr/: CMakeLists.txt  README.md  main.cpp
04.static/: README.md  main.cpp
05.eigen/: CMakeLists.txt  main.cpp
06.list/: main.cpp
07.deque/: CMakeLists.txt  main.cpp
08.gflags/: CMakeLists.txt  flags.cpp  flags.h  main.cpp
09.preprocessing/: CMakeLists.txt  README.md  main.cpp
10.lambda/: CMakeLists.txt  main.cpp
11.string/: CMakeLists.txt  main.cpp
12.regex/: CMakeLists.txt  main.cpp
13.vector/: CMakeLists.txt  main.cpp
14.thread/: CMakeLists.txt  main.cpp
15.json/: CMakeLists.txt  main.cpp
16.protobuf/: CMakeLists.txt  main.cpp  person.prototxt
17.cpr/: CMakeLists.txt  README.md  main.cpp
18.yaml/: CMakeLists.txt  README.md  config.yaml  main.cpp
19.map/: CMakeLists.txt  README.md  main.cpp
20.unordered_map/: CMakeLists.txt  README.md  main.cpp
21.struct/: CMakeLists.txt  main.cpp
22.colmap/: CMakeLists.txt  main.cpp
23.signal/: CMakeLists.txt  main.cpp
24.shm/: CMakeLists.txt
24.shm/reader/: CMakeLists.txt  main.cpp
24.shm/writer/: CMakeLists.txt  main.cpp
25.math/gauss-newton/: main.cpp
25.math/gauss-newton/ceres/: CMakeLists.txt  main.cpp
25.math/gauss-newton/handwriting/: CMakeLists.txt
26.bazel/src/: BUILD  hello.cc  hello.h  main.cc
